package domain

type Namespace struct {
	ID   string `json:"id"`
	Name string `json:"name"`
}
