package domain

type Tenant struct {
	ID   string `json:"id"`
	Name string `json:"name"`
}
